Added style.css file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Codde</title>
+    <title>Coding 4 Demo</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div>
+        <h1>This is some Demo Code</h1>
+    </div>
     
 </body>
 </html>
