New feature 1  added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h1>This is some Demo Code</h1>
         <p> THis is some pargraph</p>
     </div>
+    <div class="feature_1">
+        <p> This is feature 1</p>
+    </div>
     
 </body>
 </html>
